--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@mdi/font": "^6.5.95",
     "@nuxt/vite-builder": "^3.7.4",
+    "@vueuse/core": "^12.7.0",
     "apexcharts": "3.36.3",
+    "axios": "^1.7.9",
     "sass": "^1.49.9",
     "vue": "3.3.4",
     "vue-tabler-icons": "2.9.0",
