--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/core": "^12.7.0",
     "apexcharts": "3.36.3",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
     "sass": "^1.49.9",
     "vue": "3.3.4",
     "vue-tabler-icons": "2.9.0",
